--- a/lib/carousel.css
+++ b/lib/carousel.css
@@ -1,11 +1,12 @@
 .carousel {
   max-width: 800px;
-  height: 200px;
 }
 
 .carousel .panels {
   position: relative;
   height: 100%;
+  height: 200px;
+  overflow: hidden;
 }
 
 .carousel .panels > a {
