--- a/lib/carousel.css
+++ b/lib/carousel.css
@@ -16,6 +16,7 @@
   width: 100%;
   height: 100%;
   background: #fff;
+  object-fit: cover;
 }
 
 
@@ -27,6 +28,7 @@
 .carousel .panels img {
   width: 100%;
   height: 100%;
+  
 }
 
 .carousel .dots {
